--- a/jike.html
+++ b/jike.html
@@ -6,6 +6,9 @@
 		<link rel="stylesheet" type="text/css" href="css/极客1.css"/>
 	</head>
 	<body>
+		<div class="loading">
+			<div class="pic"></div>
+		</div>
 		<div class="head" id="top">
 			<div class="nav comwidth">
 				<div class="logo fl">
